Fixed the issue with carousel not fitting in the margins of the webpage

--- a/Library_Web/Library_Web/Content/carousel.css
+++ b/Library_Web/Library_Web/Content/carousel.css
@@ -44,8 +44,7 @@ body {
   height: 400px;
   margin-bottom: 60px;  
   left: 201px;
-
-
+  margin-right: 201px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
